--- a/Demo/package.json
+++ b/Demo/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
