--- a/Digital-Product-Pass/package.json
+++ b/Digital-Product-Pass/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@types/node": "^20.11.16",
     "class-variance-authority": "^0.7.0",
